--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "dependencies": {
     "iview": "^3.0.0",
     "vue": "^2.5.16",
-    "vue-router": "^2.8.1"
+    "vue-router": "^2.8.1",
+    "webpack-cli": "^3.2.3"
   },
   "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
+    "axios": "^0.18.0",
     "babel": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.2.4",
@@ -30,20 +32,20 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.8.5",
-    "html-loader": "^0.3.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.28.0",
     "iview-loader": "^1.2.1",
-    "less": "^2.7.1",
+    "less": "^3.9.0",
     "less-loader": "^2.2.3",
     "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
+    "url-loader": "^1.1.2",
     "vue-hot-reload-api": "^1.3.3",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^11.0.0",
     "vue-style-loader": "^1.0.0",
     "vue-template-compiler": "^2.2.1",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1",
+    "webpack": "^2.7.0",
+    "webpack-dev-server": "^2.9.4",
     "webpack-merge": "^3.0.0"
   },
   "bugs": {
