--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Aresn",
   "license": "MIT",
   "dependencies": {
+    "echarts": "^4.2.1",
     "iview": "^3.0.0",
     "vue": "^2.5.16",
     "vue-router": "^2.8.1",
