--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "iview": "^3.0.0",
     "vue": "^2.5.16",
     "vue-router": "^2.8.1",
+    "vuex": "^3.1.0",
     "webpack-cli": "^3.2.3"
   },
   "devDependencies": {
